# thumbulator

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  decode.c  exmemwb.h  exmemwb_arith.c  exmemwb_logic.c  housekeeping.txt  sim_main.c  sim_support.c  sim_support.h  testingGit.txt
eh-sim/: CMakeLists.txt  Makefile  cmake_install.cmake  eh-sim  run.sh  voltageTrace.txt
eh-sim/src/: capacitor.cpp  capacitor.hpp  checkpoint_scheme.hpp  input_source.cpp  input_source.hpp  main.cpp  msp430_energy.hpp  sim_main.c  simulate.cpp  simulate.hpp  stats.hpp  voltage_trace.cpp  voltage_trace.hpp
eh-sim/src/checkpoint/: checkpoint_scheme.hpp  magic_checkpointing.hpp
eh-sim/src/scheme/: backup_every_cycle.hpp  clank.hpp  data_sheet.hpp  eh_model.hpp  eh_scheme.hpp  magical_scheme.hpp  on_demand_all_backup.hpp  parametric.hpp  task_based.hpp
scripts/: collect_data.py  collect_eh_parameters.py  collect_parametric_data.py  run.py  run_parametric.py
src/: decode.c  decode.h  except.c  except.h  exmemwb.c  exmemwb.h  exmemwb_arith.c  exmemwb_branch.c  exmemwb_logic.c  exmemwb_mem.c  exmemwb_misc.c  sim_main.c  sim_support.c  sim_support.h
test/: Makefile
test/basicmath/: main.c
test/crc/: crc.c  main.c
test/embedded/: embedded.o.asm  rc4test.o.asm  uart.o.asm
test/limit_test/: limit_test.o.asm  limit_test.out.hexdump  limit_test.out.objdump  limit_test.stuff.o.asm
test/limits/: limit_test.c
test/lzfx/: lzfxx.c  uart.c
test/main/: aes.o.asm  crc.o.asm  main.o.asm  main.out.hexdump  main.out.objdump
test/rc4/: uart.c
test/src/: main.c  test.c
test/test/: test.o.asm  test.out.hexdump  test.out.objdump
thumbulator/: CMakeLists.txt  Makefile  cmake_install.cmake
thumbulator/include/elfio/: elfio.hpp  elfio_section.hpp
thumbulator/include/thumbulator/: cpu.h  cpu.hpp  decode.h  decode.hpp  exception.h  exmemwb.h  load_elf.hpp  memory.hpp  peripheral.hpp  sim_support.h  sim_support.hpp
thumbulator/src/: cpu.c  cpu.cpp  cpu_flags.h  cpu_flags.hpp  decode.c  decode.cpp  exception.c  exit.hpp  exmemwb.c  exmemwb_arith.c  exmemwb_arith.cpp  exmemwb_branch.c  exmemwb_branch.cpp  exmemwb_double.cpp  exmemwb_extended.cpp  exmemwb_logic.c  exmemwb_logic.cpp  exmemwb_mem.c  exmemwb_mem.cpp  exmemwb_misc.c  exmemwb_misc.cpp  exmemwb_single.cpp  load_elf.cpp  memory.cpp  peripheral.cpp  peripheral.hpp  sim_support.c  sim_support.cpp  trace.hpp  utils.cpp  utils.hpp
